--- a/genia/settings/settings.toml
+++ b/genia/settings/settings.toml
@@ -1,5 +1,5 @@
 [openai]
-OPENAI_MODEL="gpt-3.5-turbo-0613"
+OPENAI_MODEL="gpt-3.5-turbo"
 #OPENAI_MODEL="gpt-4-0613"
 function_call="auto"
 timeout=45
